# SLAM-E2E.v1

src/: RcCarDataset.py  autodrive.py  convert_to_onnx.py  drivinglog_8.8.csv  main.py  model-60.onnx  model-60.simplified.onnx  model.py  output_angle.csv  output_velocity.csv  trainer.py  utils.py
trt_inference_app/: CMakeLists.txt  etoeNet.cpp  etoeNet.h  main.cpp
